tests still failing

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,8 @@
     "save": "^2.9.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "chai": "^4.3.7",
+    "jest": "^29.5.0",
+    "sinon": "^15.0.4"
   }
 }
