--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
